--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      body{
+        background-color: bisque;
+        width: 800px;
+      }
+    </style>
 </head>
 <body>
-  <p>はじめまして、githubへ！</P>
-  <p>情報の更新ができていますか？</p>
-  <p>Github</p>
-    
+  
 </body>
 </html>
