--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
      <p>初めまして！　githubへ！</p>
      <P>情報の更新ができていますか？</P>
      <p>よろしくお願い申し上げます</p>
+     <p>Githubとの連携ができました！</p>
 </body>
 </html>
