--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -6,24 +6,24 @@
     <title>Box Design Practice</title>
 </head>
 <style>
-    .s1{
+    .sec1{
         background-color: #e6f7ff;
-        border: 2px #333;
+        border: 2px solid #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
     }
-    .s2{
+    .sec2{
         background-color: #fff2e6;
-        border: 2px #333;
+        border: 2px solid #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 5px;
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
     }
-    .s3{
+    .sec3{
         background-color: #f9e6ff;
-        border: 2px #333;
+        border: 2px dashed #333;
         padding: 20x;
         margin: 20px 0;
         border-radius: 0px;
@@ -31,7 +31,7 @@
 </style>
 <body>
     <h1>Box Design Practice</h1>
-    <section class="s1">
+    <section class="sec1">
     <h2>Box 1</h2>
     <p>This is the first box.It has a light blue backgrounds.rounded corners,and a solid border.This box includes<br> an images below to
         enhance the visual appeal of the content.The image should be relevant to the content<br> described and help illusrate the point.
@@ -39,7 +39,7 @@
     <img src="images/box1.jpg" width="10%" height="10%">
     </section>
 
-    <section class="s2">
+    <section class="sec2">
     <h2>Box 2</h2>
     <p>This is the second box.It has a light orange background.sligthtly rounded corners,a solid border.and a<br> shadow.Including an
         image in this box helps break up the text and provides a visual example of the<br> content.The use of CSS box shadow enhances the
@@ -48,7 +48,7 @@
     <img src="images/box2.jpg" width="10%" height="10%">
     </section>
 
-    <section class="s3">
+    <section class="sec3">
     <h2>Box 3</h2>
     <p>This is the third box.It has a light purple background,no rounded corners,and a dashed border.This box<br> also includes an image,
         which helps to demonstrate how diffrent styles and borders can be applied to<br> create distinct visual sections within a webpage.
