--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -6,9 +6,12 @@
     <title>Box Design Practice</title>
 </head>
 <style>
+    body{
+        background-color: rgb(203, 252, 252);
+    }
     .section1{
         background-color: #e6f7ff;
-        border: 2px solid #333;
+        border: 2px solid #c1f6fa;
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
