--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -27,7 +27,7 @@
     .section3{
         background-color: #f9e6ff;
         border: 2px dashed #333;
-        padding: 20x;
+        padding: 20px;
         margin: 20px 0;
         border-radius: 0px;
     }
