--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -36,14 +36,14 @@
 </style>
 <body>
     <h1>Responsive Design Practice</h1>
-    <section class="Section1">
+    <section class="section1">
      <h2>Seciton 1</h2>
         <p>This is the first section.it has a light blue bacground,<br>padding,margin,and a box shadow.The layout adjusts<br>
            responsively to diffrent screen sizes</p>
      <img src="images/section1.jpg">
     </section>
     
-    <section class="Section2">
+    <section class="section2">
         <h2>Section 2</h2>
         <p>This is the second section.It has a light orange background,<br>
            padding,margin,and a box shadow.The layout adjusts<br>
@@ -51,7 +51,7 @@
      <img src="images/section2.jpg">
     </section>
 
-    <section class="Section3">
+    <section class="section3">
         <h2>Section 3</h2>
         <p>This is the third section.It has a light purple background,<br>
            padding,margin,and a box shadow.The layout adjustd<br>
