--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -24,12 +24,14 @@
         padding: 20px;
         margin: 20px 0;
         border: solid 0px;
+        float: right;
     }
     .section3{
         background-color: rgb(236, 174, 236);
         padding: 20px;
         margin: 20px 0;
         border: solid 0px;
+        float: right;
 
     }
    
