--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -12,24 +12,43 @@
     body{
         background-color: rgb(178, 241, 220);
     }
+    section{
+        flex: 1 1 100%;
+        box-sizing: border-box;
+        padding: 20px;
+        margin: 20px 0;
+    }
     .section1{
         background-color: lightblue;
-        padding: 20px;
-        border: solid 0px;
+        border-radius: 10px;
         
+    }
+    .section1 img{
+        max-width: 100%;
+        height: auto;
     }
     .section2{
         background-color: papayawhip;
-        padding: 20px;
-        border: solid 0px;
-        float: right;
+        border-radius: 5px;
+        box-shadow: 3px 3px 10px;
+    }
+    .section2 img{
+        max-width: 100%;
+        height: auto;
     }
     .section3{
         background-color: rgb(236, 174, 236);
-        padding: 20px;
-        border: solid 0px;
-        float: right;
-
+        border-radius: 0px
+    }
+    .section3 img{
+        max-width: 100%;
+        height: auto;
+    }
+    @media (min-width: 850px) {
+    section{
+        flex: 1 1 calc(33%-40px);
+        margin: 20px;
+    }   
     }
    
 </style>
