--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -17,6 +17,7 @@
         box-sizing: border-box;
         padding: 20px;
         margin: 20px 0;
+        max-width: 33%;
     }
     .section1{
         background-color: lightblue;
