--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -18,7 +18,7 @@
         padding: 20px;
         margin: 20px 0;
         max-width: 40%;
-        float: left;
+        display: flex;
     }
     .section1{
         background-color: lightblue;
