--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -17,8 +17,8 @@
         box-sizing: border-box;
         padding: 20px;
         margin: 20px 0;
-        max-width: 40%;
-        display: flex;
+        max-width: 50%;
+        float: left;
     }
     .section1{
         background-color: lightblue;
