--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -6,6 +6,11 @@
     <title>Responsive Design Practice</title>
 </head>
 <style>
+    .aaa{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
     .img{
         resize{width: 100%;};
     }
@@ -18,9 +23,6 @@
         padding: 20px;
         margin: 20px 0;
         max-width: 30%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
     }
     .section1{
         background-color: lightblue;
@@ -58,6 +60,7 @@
 </style>
 <body>
     <h1>Responsive Design Practice</h1>
+    <div class="aaa">
     <section class="section1">
      <h2>Seciton 1</h2>
         <p>This is the first section.it has a light blue bacground,<br>padding,margin,and a box shadow.The layout adjusts<br>
@@ -80,5 +83,6 @@
            responsively to diffrent screen sizes.</p>
      <img src="images/section3.jpg">    
     </section>
+    </div>
 </body>
 </html>
