--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -1,84 +1,76 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Design Practice</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Responsive Design Practice</title>
 </head>
 <style>
-    .aaa{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    body{
-        background-color: rgb(178, 241, 220);
-    }
-    section{
-        flex: 1 1 100%;
-        box-sizing: border-box;
-        padding: 20px;
-        margin: 20px 0;
-    }
-    .section1{
-        background-color: lightblue;
-        border-radius: 10px;
-        
-    }
-    .section1 img{
-        max-width: 100%;
-        height: auto;
-    }
-    .section2{
-        background-color: papayawhip;
-        border-radius: 5px;
-        box-shadow: 3px 3px 10px;
-    }
-    .section2 img{
-        max-width: 100%;
-        height: auto;
-    }
-    .section3{
-        background-color: rgb(236, 174, 236);
-        border-radius: 0px
-    }
-    .section3 img{
-        max-width: 100%;
-        height: auto;
-    }
-    @media (min-width: 850px) {
-    section{
-        flex: 1 1 calc(33.33%-40px);
-        margin: 20px;
-    }   
-    }
-   
+   body {
+           background-color: #adcae04f;
+           font-family: Arial, sans-serif;
+       }
+       .aaa {
+           display: flex;
+           flex-wrap: wrap;
+           justify-content: center;
+       }
+       section {
+           flex: 1 1 100%;
+           box-sizing: border-box;
+           padding: 20px;
+           margin: 20px 0;
+       }
+       .Section1 {
+           background-color: #e6f7ff;
+           border-radius: 10px;
+       }
+       .section1 img {
+           max-width: 100%;
+           height: auto;
+       }
+       .Section2 {
+           background-color: #fff2e6;
+           border-radius: 5px;
+           box-shadow: 3px 3px 10px rgba(0,0,0,0.1);
+       }
+       .section2 img {
+           max-width: 100%;
+           height: auto;
+       }
+       .Section3 {
+           background-color: #f9e6ff;
+           border-radius: 0;
+       }
+       .section3 img {
+           max-width: 100%;
+           height: auto;
+       }
+       @media (min-width: 850px) {
+       section {
+           flex: 1 1 calc(33.33% - 40px);
+           margin: 20px;
+       }
+       }
 </style>
 <body>
-    <h1>Responsive Design Practice</h1>
-<div class="aaa">
-    <section class="section1">
-     <h2>Seciton 1</h2>
-        <p>This is the first section.it has a light blue bacground,<br>padding,margin,and a box shadow.The layout adjusts<br>
-           responsively to diffrent screen sizes</p>
-     <img src="images/section1.jpg">
-    </section>
-    
-    <section class="section2">
-        <h2>Section 2</h2>
-        <p>This is the second section.It has a light orange background,<br>
-           padding,margin,and a box shadow.The layout adjusts<br>
-           responsively to diffrent screen sizes.</p>
-     <img src="images/section2.jpg">
-    </section>
-
-    <section class="section3">
-        <h2>Section 3</h2>
-        <p>This is the third section.It has a light purple background,<br>
-           padding,margin,and a box shadow.The layout adjustd<br>
-           responsively to diffrent screen sizes.</p>
-     <img src="images/section3.jpg">    
-    </section>
+<h1>Responsive Design Practice</h1>
+ <div class="aaa">
+  <section class="Section1">
+    <h2>Section1</h2>
+     <p>This is first section. lt has a light blue background,padding,margin,and a box shadow. The layout adjusts responsively to different screen sizes</p>
+   <img src="images/section1.jpg" alt="">
+  </section>
+<section class="Section2">
+   <h2>Section2</h2>
+   <p>This is the second section. lt has a light orange background,padding,margin,and a box shadow.The layout adjusts responsively to different screen sizes </p>
+   <img src="images/section2.jpg" alt="">
+</section>
+<section class="Section3">
+  <h2>Section3</h2>
+  <p>This is the third section.lt has a light purple background,padding, margin,and a box shadow. The layout adjusts responsively to different screen sizes</p>
+   <img src="images/section3.jpg" alt="">
+</section>
 </div>
 </body>
 </html>
